tests/models/struct/unnamed/unit/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
   ()
);
fn main() {}
