tests/models/struct/unnamed/unit/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/struct/unnamed/unit/fail/alias.rs:4:4
  |
4 |    #[field(alias = "val")]
  |    ^
